# mzrt2h5

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_sim_ins.py  tox.ini
.github/workflows/: publish.yml  python-package.yml
app/: app.py  test_numpy.py
app/templates/: index.html
src/mzrt2h5/: __init__.py  alignment.py  cli.py  dataset.py  model.py  processing.py  simulation.py  trainer.py  visualization.py
src/mzrt2h5/mzrtsim/: __init__.py  mzm_default.txt  parser.py  reader.py  sim.py  writer.py
src/mzrt2h5/mzrtsim/data/: monahrms1.pkl
tests/: test_processing.py  test_simulation.py
